# getWatherBot

./: LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 1e73cb7ad39d_add_users_table.py
app/: custom_types.py  database.py  main.py  settings.py
app/keyboards/: __init__.py  location_menu_reply_keyboard_markup.py  main_menu_inline_keyboard_markup.py
app/models/: __init__.py  base.py  user.py
app/services/: __init__.py  open_weather.py
