[tool.poetry]
name = "get-weather-bot"
version = "0.1.0"
description = ""
authors = ["Dmytro Shyrokov <shyrokov.dmytro@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.36"
aiogram = "^3.16.0"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
aiohttp = "^3.11.11"
emoji-country-flag = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
